# avoid-irs

./: .gitattribute  .gitattributes  .gitignore  README.md
.github/workflows/: rust.yml
avoid-irs-back/: Cargo.toml
avoid-irs-back/src/: main.rs
avoid-irs-front/: README.md  package-lock.json  package.json  vue.config.js
avoid-irs-front/avoid-irs/: README.md  package-lock.json  package.json
avoid-irs-front/avoid-irs/src/: App.vue
avoid-irs-front/avoid-irs/src/components/: IncomeTab.vue
avoid-irs-front/avoid-irs/src/router/: index.ts
avoid-irs-front/src/: App.tsx
avoid-irs-front/src/api/: api.ts
