[package]
name = "avoid-irs-back"
version = "0.1.0"
edition = "2021"
authors = ["Misho <https://github.com/namper>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.rocket_cors]
version = "0.5.1"
